@@ -35,6 +35,7 @@ EXPORTS
 	winx_enable_privilege
 	winx_get_drive_type
 	winx_get_volume_information
+	winx_get_free_volume_regions
 	winx_vflush
 	winx_fopen
 	winx_fbopen
